# remote-send-tauri

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.vue  FileDisplay.vue  RecvTransfer.vue  SendTransfer.vue  main.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  s3_action.rs
